// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<tr>
  <td>
    <BranchIcon
      branchLike={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    master
    <div
      className="outline-badge spacer-left"
    >
      branches.main_branch
    </div>
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "isMain": true,
          "name": "master",
        }
      }
      component="foo"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  />
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="ig-spacer-left"
    >
      <ActionsDropdownItem
        className="js-rename"
        onClick={[Function]}
      >
        branches.rename
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`renders pull request 1`] = `
<tr>
  <td>
    <BranchIcon
      branchLike={
        Object {
          "base": "master",
          "branch": "feature",
          "key": "1234",
          "title": "Feature PR",
        }
      }
      className="little-spacer-right big-spacer-left"
    />
    1234 – Feature PR
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "base": "master",
          "branch": "feature",
          "key": "1234",
          "title": "Feature PR",
        }
      }
      component="foo"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  />
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="ig-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[Function]}
      >
        branches.pull_request.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`renders short-living branch 1`] = `
<tr>
  <td>
    <BranchIcon
      branchLike={
        Object {
          "analysisDate": "2017-09-27T00:05:19+0000",
          "isMain": false,
          "mergeBranch": "foo",
          "name": "feature",
          "type": "SHORT",
        }
      }
      className="little-spacer-right big-spacer-left"
    />
    feature
  </td>
  <td
    className="thin nowrap"
  >
    <Connect(BranchStatus)
      branchLike={
        Object {
          "analysisDate": "2017-09-27T00:05:19+0000",
          "isMain": false,
          "mergeBranch": "foo",
          "name": "feature",
          "type": "SHORT",
        }
      }
      component="foo"
    />
  </td>
  <td
    className="thin nowrap text-right big-spacer-left"
  >
    <DateFromNow
      date="2017-09-27T00:05:19+0000"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown
      className="ig-spacer-left"
    >
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[Function]}
      >
        branches.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;
